refactor: untrack `config.cfg`

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,3 +1,20 @@
+con_enable "1"
+viewmodel_fov "100"
+fov_desired "90"
+tf_dingalingaling "1"
+tf_dingalingaling_effect "2"
+tf_dingaling_volume "1"
+tf_dingaling_pitchmindmg "100"
+tf_dingaling_pitchmaxdmg "100"
+tf_dingalingaling_lasthit "1"
+tf_dingalingaling_last_effect "6"
+tf_dingaling_lasthit_volume "1"
+tf_dingaling_lasthit_pitchmindmg "100"
+tf_dingaling_lasthit_pitchmaxdmg "100"
+hud_medicautocallers "1"
+hud_medicautocallersthreshold "90"
+hud_medichealtargetmarker "1"
+
 exec tweaks/console_filter
 exec tweaks/null_movement
 exec tweaks/tab_netgraph
