feat: add clovervidia premade closed captions

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,4 +1,8 @@
 con_enable "1"
+closecaption "1"
+cc_subtitles "0"
+cc_lang "clovervidiar"
+cc_predisplay_time "0"
 viewmodel_fov "100"
 fov_desired "90"
 tf_dingalingaling "1"
